# High-Throughput-Block-Cipher-Implementations

./: README.md
AES_AVX2/: CMakeLists.txt  data.cpp  key_expansion.cpp  main.cpp  mixlinear2.cpp  sbox.cpp  transpose3.cpp
AES_AVX512/: CMakeLists.txt  data.cpp  encryptool.h  key_expansion.cpp  main.cpp  mixlinear2.cpp  sbox2.cpp  transpose2.cpp
SM4_AVX2/: CMakeLists.txt  data.cpp  encryptool.h  key_expansion.cpp  linerLayer.cpp  main.cpp  sbox4.cpp  transpose.cpp
SM4_AVX512/: CMakeLists.txt  data.cpp  encryptool.h  key_expansion.cpp  main.cpp  mixlinear.cpp  sbox5.cpp  transpose.cpp
